updated verge 3d demo

--- a/verge.html
+++ b/verge.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-    <!-- <iframe width="1024" height="640" src="https://www.githubio.io/lukaszexeon/my_awesome_app.html"></iframe> -->
-    <iframe width="1024" height="640" src="demo1/demo1.html"></iframe>
+    <!-- <p2> Here is demo</p2> -->
+    <iframe width="1024" height="640" src="wheels_demo/wheels_demo.html"></iframe>
 
 </body>
 </html>
