--- a/verge.html
+++ b/verge.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- <p2> Here is demo</p2> -->
-    <iframe width="1024" height="640" src="wheels_demo/wheels_demo.html"></iframe>
+    <iframe width="1024" height="640" src="lukaszexeon.github.io/wheels_demo/wheels_demo.html"></iframe>
 
 </body>
 </html>
