buttons in verge.html

--- a/verge/verge.html
+++ b/verge/verge.html
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=no" />
 
   <!-- <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css"> -->
+  <link rel="stylesheet" href="styles.css" type="text/css">
 
+  
   <title>The HTML5 Herald</title>
   <meta name="Embeded viever demo" content="Embeded viever demo">
   <!-- <meta name="author" content="SitePoint"> -->
@@ -19,6 +21,8 @@
 
 <body>
     <!-- <p2> Here is demo</p2> -->
+    <div id="hide_button">Hide</div>
+    <div id="show_button">Show</div>
     <iframe width="1024" height="640" src="lukaszexeon.github.io/wheels_demo/wheels_demo.html"></iframe>
 
 </body>
