fixed issue with viewing verge3d image

--- a/verge/verge.html
+++ b/verge/verge.html
@@ -23,7 +23,7 @@
     <!-- <p2> Here is demo</p2> -->
     <div id="hide_button">Hide</div>
     <div id="show_button">Show</div>
-    <iframe width="1024" height="640" src="lukaszexeon.github.io/wheels_demo/wheels_demo.html"></iframe>
-
+    <iframe width="1024" height="640" src="wheels_demo/wheels_demo.html"></iframe>
+    <!-- <iframe src="https://clara.io/player/v2/93e423b6-2a95-4283-b972-196255e9cac9?renderer=webgl?tools=0" width="800" height="600" allowfullscreen ></iframe> -->
 </body>
 </html>
