BASIC LENGTH CONTROL DONE

--- a/verge/verge.html
+++ b/verge/verge.html
@@ -20,10 +20,7 @@
 </head>
 
 <body>
-    <!-- <p2> Here is demo</p2> -->
-    <div id="hide_button">Hide</div>
-    <div id="show_button">Show</div>
-    <iframe width="1024" height="640" src="wheels_demo/wheels_demo.html"></iframe>
-    <!-- <iframe src="https://clara.io/player/v2/93e423b6-2a95-4283-b972-196255e9cac9?renderer=webgl?tools=0" width="800" height="600" allowfullscreen ></iframe> -->
+    <iframe id="frame" style="border: 0; width: 100%; height: 100%" frameBorder="0" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_dem_2/index.html"></iframe>
+    <!-- <iframe width="2048" height="1280" frameBorder="0" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_dem_2/index.html"></iframe> -->
 </body>
 </html>
