--- a/verge/verge.html
+++ b/verge/verge.html
@@ -7,20 +7,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=no" />
 
-  <!-- <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css"> -->
   <link rel="stylesheet" href="styles.css" type="text/css">
 
   
   <title>The HTML5 Herald</title>
   <meta name="Embeded viever demo" content="Embeded viever demo">
-  <!-- <meta name="author" content="SitePoint"> -->
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
 </head>
 
 <body>
-    <iframe id="frame" style="border: 0; width: 100%; height: 100%" frameBorder="0" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_dem_2/index.html"></iframe>
-    <!-- <iframe width="2048" height="1280" frameBorder="0" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_dem_2/index.html"></iframe> -->
+  <iframe width="2048" height="1280" frameBorder="0" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_dem_2/index.html"></iframe>
 </body>
 </html>
