--- a/demo3.html
+++ b/demo3.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=no" />
 
   <!-- <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css"> -->
-  <!-- <link rel="stylesheet" href="styles.css" type="text/css"> -->
+  <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
 
   
   <title>The HTML5 Herald</title>
@@ -20,9 +20,7 @@
 </head>
 
 <body>
-    <a href="/demo2.html">demo2</a>
-    <a href="/demo3.html">demo3</a>
-    <!-- <iframe width=100% style="position: absolute; height: 100%; border: none; overflow: hidden" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_dem_2/index.html"></iframe> -->
+    <iframe width=100% style="position: absolute; height: 100%; border: none; overflow: hidden" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_demo_3/wheels_demo_3.html"></iframe>
 
 </body>
 </html>
