--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
 </head>
 
 <body>
-    <a href="/demo2.html">demo2</a>
-    <a href="/demo3.html">demo3</a>
-    <!-- <iframe width=100% style="position: absolute; height: 100%; border: none; overflow: hidden" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_dem_2/index.html"></iframe> -->
-
+  <iframe width=100% style="position: absolute; height: 100%; border: none; overflow: hidden" allowfullscreen src="https://cdn.soft8soft.com/AROAJSY2GOEHMOFUVPIOE:3bd2ceaeca/applications/wheels_demo_3/index.html"></iframe>
 </body>
 </html>
